win32/screen_win32.c, win32/sound.c, wince/port/atari_wince.c,
wince/port/sound.c, xep80.c: rename externals with Log_, Aprint -> Log_print
Aflushlog -> Log_flushlog.
* compfile.[ch], sio.c, ui.c rename CompressedFile_ to CompFile_ so that it
matches the filename.
* xep80_fonts.[ch] xep80.c: rename externals with XEP80_Fonts_.


2008-06-30  Perry McFarlane  <perry_m@fastmail.fm>
* atari.c, atari_sdl.c, configure.ac, javanvm/atari800.java,
javanvm/atari_javanvm.c, pokeysnd.c, sound.h, ui.c, win32/sound.c:
add support for stereo, new sound.h function Sound_Reint on some platforms,
fixes to sdl sound, minor fixes.
* win32/sound.c: fix STEREO_SOUND undefined


2008-06-29  Perry McFarlane  <perry_m@fastmail.fm>
* configure.ac: -source 1.4 to suppress javac warnings


2008-06-28  Perry McFarlane  <perry_m@fastmail.fm>
* memory.h: suppress PAGED_MEM warning


2008-06-27  Perry McFarlane  <perry_m@fastmail.fm>
* atari.c: add -basic_rom none
* Makefile.in fix javanvm variables
* util.[ch] cassette.c, configure.ac: Util_strncpy to fix javanvm bug
* INSTALL, UnixRuntime.patch, atari800.java, atari_javanvm.c: Java applet


2008-06-24  Perry McFarlane  <perry_m@fastmail.fm>
* pbi.[ch], pbi_xld.[ch], pbi_bb.[ch], pbi_mio.[ch], statesav.c: state saving
for MIO, Black Box, XLD.


2008-06-19  Perry McFarlane  <perry_m@fastmail.fm>
* ui.c, xep80.c: improve XEP80 state saving


2008-06-18  Perry McFarlane  <perry_m@fastmail.fm>
* DOC/CREDITS, DOC/TODO, USAGE, atari.c, atari_sdl.c, configure.ac, pia.c,
platform.h, statesav.c, ui.c, xep80.[ch], xep80_fonts.[ch]:
Added XEP80 emulation by Mark Grebe to the SDL version, from Atari800MacX


2008-06-18  Christian Groessler  <chris@groessler.org>
* dc/atari_dc.c (Atari_Keyboard): recognize TAB key.
* atari_x11.c (Atari_DisplayScreen): add missing XSync call in not-SHM
part.
* ui.c, ui.h: add additional parameter to the fMessage function,
indicating whether to wait for a key press. Display a "please wait"
message in SaveState and LoadState.